rename to index.html
add deployment script

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
      body {
         background-color: #000000;
+        font-family: arial;
     }
 
     @font-face {
@@ -199,7 +200,10 @@
              <div style="padding: 20px 40px; font-size: 32px;">FutureosTech</div>
         </div>
     </div>
-    <button onclick="toggle()">Toggle</button>
+    <button style="margin-top:20px" onclick="toggle()">Toggle</button>
   </div>
+    <footer>
+    <a href="https://github.com/ivanceras/futureostech">code</a>
+    </footer>
 </body>
 </html>
