trying out 4 components

--- a/anim-webgl.html
+++ b/anim-webgl.html
@@ -15,7 +15,7 @@
 </style>
       <!-- Learn about this code on MDN: https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Basic_2D_animation_example -->
       <script id="vertex-shader" type="x-shader/x-vertex">
-         attribute vec2 aVertexPosition;
+         attribute vec3 aVertexPosition;
 
          uniform vec2 uScalingFactor;
          uniform vec2 uRotationVector;
@@ -97,13 +97,20 @@ function startup() {
 	currentRotation = [0, 1];
 	currentScale = [1.0, aspectRatio];
 
-	vertexArray = new Float32Array([-0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5]);
+	vertexArray = new Float32Array([
+    -0.5,  0.5,0,1,
+     0.5,  0.5,0,1,
+     0.5, -0.5,0,1,
+    -0.5,  0.5,0,1,
+     0.5, -0.5,0,1,
+    -0.5, -0.5,0,1
+  ]);
 
 	vertexBuffer = gl.createBuffer();
 	gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
 	gl.bufferData(gl.ARRAY_BUFFER, vertexArray, gl.STATIC_DRAW);
 
-	vertexNumComponents = 2;
+	vertexNumComponents = 4;
 	vertexCount = vertexArray.length / vertexNumComponents;
 
 	currentAngle = 0.0;
